--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Siddharth Tiwari</title>
+
+    <!--
+    including font awesome - it is nifty for adding icons to your webpage
+    see http://fortawesome.github.io/Font-Awesome/icons/
+    -->
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+    <!-- 
+    including bootstrap - it is nifty for pre-styled components
+    see http://getbootstrap.com/components/ for components
+    see https://bootswatch.com/ for other bootstrap themes
+    -->
+    <link href="https://bootswatch.com/yeti/bootstrap.min.css" rel="stylesheet">
+
+    <!-- 
+    including a custom stylesheet that you can edit - css/custom.css
+    -->
+    <link href="css/custom.css" rel="stylesheet">
+
+  </head>
+
+  <body>
+    <div class="container-fluid colored-header">
+        <div class="row">
+          <div class="col-sm-12">
+           <center> <h1>Hello! My Name is Siddharth Tiwari. </h1></center>
+           <center> <h4>I am an Aspiring Data Scientist and an Undergraduate Student at The LNM Institute Of Information Technology, Jaipur,India.</h4></center>
+          </div>
+        </div>
+    </div>
+    
+ </body>
+
+</html>
