--- a/index.html
+++ b/index.html
@@ -1,42 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en-US" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Siddharth Tiwari</title>
+    <!-- SEO -->
+    <title>Siddharth Tiwari.</title>
+    <meta name="description" content="Siddharth Tiwari's PortFolio">
 
-    <!--
-    including font awesome - it is nifty for adding icons to your webpage
-    see http://fortawesome.github.io/Font-Awesome/icons/
-    -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- URL CANONICAL -->
+    <link rel="canonical" href="https://siddharthtiwari.github.io/">
 
-    <!-- 
-    including bootstrap - it is nifty for pre-styled components
-    see http://getbootstrap.com/components/ for components
-    see https://bootswatch.com/ for other bootstrap themes
-    -->
-    <link href="https://bootswatch.com/yeti/bootstrap.min.css" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i%7CMaitree:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
 
-    <!-- 
-    including a custom stylesheet that you can edit - css/custom.css
-    -->
-    <link href="css/custom.css" rel="stylesheet">
+    <!-- CSS Base -->
+    <link rel="stylesheet" type="text/css" media="all" href="static/css/main.css">
 
-  </head>
+    <!-- Typewriter -->
+    <link rel="stylesheet" type="text/css" media="all" href="static/css/typewriter.css">
 
-  <body>
-    <div class="container-fluid colored-header">
-        <div class="row">
-          <div class="col-sm-12">
-           <center> <h1>Hello! My Name is Siddharth Tiwari. </h1></center>
-           <center> <h4>I am an Aspiring Data Scientist and an Undergraduate Student at The LNM Institute Of Information Technology, Jaipur,India.</h4></center>
-          </div>
-        </div>
-    </div>
+    <!-- CSS Colors -->
+    <link rel="stylesheet" type="text/css" media="all" href="static/css/colors.css">
+
+    <!-- Optional - CSS SVG Icons (Font Awesome) -->
+    <link rel="stylesheet" type="text/css" media="all" href="static/css/svg-icons.css">
+
     
- </body>
+  </head>
+  <body>
 
+        <section class="bg-black aligncenter ">
+          <!-- Overlay/Opacity: [class*="bg-"] > .background.dark or .light -->
+          <span class="background"><canvas id="nokey" width="100%" height="80%"></canvas></span>
+
+          <!--.wrap = container 1200px -->
+          <div class="wrap fadeInUp">
+            <h1 class="text-landing fadeInUp">Siddharth Tiwari</h1>
+          </div>
+        </section>
+
+
+    <script src="static/js/particles.js"></script>
+
+ 
+
+  </body>
 </html>
+
