--- a/index.html
+++ b/index.html
@@ -1,50 +1,95 @@
-<!doctype html>
-<html lang="en-US" prefix="og: http://ogp.me/ns#">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- SEO -->
-    <title>Siddharth Tiwari.</title>
-    <meta name="description" content="Siddharth Tiwari's PortFolio">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <!-- URL CANONICAL -->
-    <link rel="canonical" href="https://siddharthtiwari.github.io/">
+		<title>Siddharth Tiwari, Data Scientist</title>
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i%7CMaitree:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
+		<meta name="description" content="Siddharth Tiwari, Data Scientist, New Delhi."/>
 
-    <!-- CSS Base -->
-    <link rel="stylesheet" type="text/css" media="all" href="static/css/main.css">
+		<meta property="og:locale" content="en_US" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Siddharth Tiwari" />
+		<meta property="og:description" content="Data Scientist, New Delhi" />
+		<meta property="og:url" content="https://siddharthtiwari.github.io" />
+		<meta property="og:site_name" content="Siddharth Tiwari" />
 
-    <!-- Typewriter -->
-    <link rel="stylesheet" type="text/css" media="all" href="static/css/typewriter.css">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="@Siddharth_5mn">
+		<meta name="twitter:creator" content="@Siddharth_5mn">
+		<meta name="twitter:title" content="Siddharth Tiwari">
+		<meta name="twitter:description" content="Aspiring Data Scientist"
 
-    <!-- CSS Colors -->
-    <link rel="stylesheet" type="text/css" media="all" href="static/css/colors.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 
-    <!-- Optional - CSS SVG Icons (Font Awesome) -->
-    <link rel="stylesheet" type="text/css" media="all" href="static/css/svg-icons.css">
+		<link rel="icon" href="img/favicon.png">
 
-    
-  </head>
-  <body>
+				<link rel="stylesheet" href="css/style.css">
+			</head>
 
-        <section class="bg-black aligncenter ">
-          <!-- Overlay/Opacity: [class*="bg-"] > .background.dark or .light -->
-          <span class="background"><canvas id="nokey" width="100%" height="80%"></canvas></span>
+	<body>
+		<section id="content">
 
-          <!--.wrap = container 1200px -->
-          <div class="wrap fadeInUp">
-            <h1 class="text-landing fadeInUp">Siddharth Tiwari</h1>
-          </div>
-        </section>
+			<div id="scrollable">
+
+				<section class="description">
+					<h1><span class="line">Siddharth Tiwari</span></h1>
+
+					<p>
+						<span class="line">Junior Data Scientist,</span><br>
+						<span class="line">UnderGraduate Student <a href="http://lnmiit.ac.in/" target="_blank">@ The LNMIIT,Jaipur</a></span><br><br>
+						<span class="line">For any inquiry, feel free</span><br>
+						<span class="line">to say hello at <a href="mailto:siddharthtiwari01@gmail.com">siddharthtiwari01@gmail.com</a></span><br><br>
+						<span class="line">
+							<a href="https://www.facebook.com/siddharthtiwari01" target="_blank">Facebook</a> <span class="sep">•</span>
+							<a href="https://www.linkedin.com/in/siddharthtiwari01/" target="_blank">Linkedin</a> <span class="sep">•</span>
+							<a href="https://github.com/SiddharthTiwari" target="_blank">Github</a> <span class="sep">•</span>
+							<a href="https://www.kaggle.com/siddharth5mn" target="_blank">Kaggle</a>
+						</span>
+					</p>
+				</section>
+
+				<section class="references">
+					<h3><span class="line">Data Science Projects</span></h3>
+
+					<ul>
+						<li>
+							<span class="line"><a href="https://github.com/SiddharthTiwari/Modelling-and-Generating-Sequences-of-Polyphonic-Music-With-RNN-RBM" target="_blank">Modelling-and-Generating-Sequences-of-Polyphonic-Music-With-RNN-RBM</a> <br class="mobile">― Github Repository</span>
+						</li>
+						<li>
+							<span class="line"><a href="https://github.com/SiddharthTiwari/Home-Depot-Product-Search-Relevance" target="_blank">Home-Depot-Product-Search-Relevance</a> <br class="mobile">― Kaggle Competition/Github Repository</span>
+						</li>
+						<li>
+							<span class="line"><a href="https://github.com/SiddharthTiwari/Expedia-Hotel-Recommendations" target="_blank" >Expedia-Hotel-Recommendations</a> <br class="mobile">―  Kaggle Competition/Github Repository</span>
+						</li>
+						<li>
+							<span class="line"><a href="https://github.com/SiddharthTiwari/Facebook-V-Predicting-Check-Ins" target="_blank">Facebook-V-Predicting-Check-Ins</a> <br class="mobile">―  Kaggle Competition/Github Repository</span>
+						</li>
+						<li>
+							<span class="line"><a href="https://github.com/SiddharthTiwari/Talking-User-Data" target="_blank" data-img="elle70.jpg">Talking-User-Data</a>  <br class="mobile">―  Kaggle Competition/Github Repository</span>
+						</li>
+						<li>
+							<span class="line"><a href="https://github.com/SiddharthTiwari/GroupoBimbo" target="_blank">GroupoBimbo</a> <br class="mobile">―  Kaggle Competition/Github Repository</span>
+						</li>
 
 
-    <script src="static/js/particles.js"></script>
+					</ul>
+				</section>
 
- 
+			</div>
 
-  </body>
+			<span class="mask"></span>
+
+			<div class="background"></div>
+
+
+		</section>
+
+	</body>
+		<script type="text/javascript" src="js/scripts.js"></script>
+	
 </html>
 
