--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<span class="line"><a href="https://github.com/SiddharthTiwari/Facebook-V-Predicting-Check-Ins" target="_blank">Facebook-V-Predicting-Check-Ins</a> <br class="mobile">―  Kaggle Competition/Github Repository</span>
 						</li>
 						<li>
-							<span class="line"><a href="https://github.com/SiddharthTiwari/Talking-User-Data" target="_blank" data-img="elle70.jpg">Talking-User-Data</a>  <br class="mobile">―  Kaggle Competition/Github Repository</span>
+							<span class="line"><a href="https://github.com/SiddharthTiwari/Talking-User-Data" target="_blank">Talking-User-Data</a>  <br class="mobile">―  Kaggle Competition/Github Repository</span>
 						</li>
 						<li>
 							<span class="line"><a href="https://github.com/SiddharthTiwari/GroupoBimbo" target="_blank">GroupoBimbo</a> <br class="mobile">―  Kaggle Competition/Github Repository</span>
