change in projects

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 						<span class="line">For any inquiry, feel free</span><br>
 						<span class="line">to say hello at <a href="mailto:siddharthtiwari01@gmail.com">siddharthtiwari01@gmail.com</a></span><br><br>
 						<span class="line">
-							<a href="https://www.facebook.com/siddharthtiwari01" target="_blank">Facebook</a> <span class="sep">•</span>
 							<a href="https://www.linkedin.com/in/siddharthtiwari01/" target="_blank">Linkedin</a> <span class="sep">•</span>
 							<a href="https://github.com/SiddharthTiwari" target="_blank">Github</a> <span class="sep">•</span>
+							<a href="http://www.spoj.com/users/siddharth_5mn/" target="_blank">SPOJ</a> <span class="sep">•</span>
 							<a href="https://www.kaggle.com/siddharth5mn" target="_blank">Kaggle</a>
 						</span>
 					</p>
@@ -59,6 +59,10 @@
 						<li>
 							<span class="line"><a href="https://github.com/SiddharthTiwari/Modelling-and-Generating-Sequences-of-Polyphonic-Music-With-RNN-RBM" target="_blank">Modelling-and-Generating-Sequences-of-Polyphonic-Music-With-RNN-RBM</a> <br class="mobile">― Github Repository</span>
 						</li>
+						<li>
+							<span class="line"><a href="https://github.com/SiddharthTiwari/Implementing-Deep-Dream-With-Caffe-and-Model-Zoo" target="_blank">Implementing-Deep-Dream-With-Caffe-and-Model-Zoo</a> <br class="mobile">― Github Repository</span>
+						</li>
+						
 						<li>
 							<span class="line"><a href="https://github.com/SiddharthTiwari/Home-Depot-Product-Search-Relevance" target="_blank">Home-Depot-Product-Search-Relevance</a> <br class="mobile">― Kaggle Competition/Github Repository</span>
 						</li>
