--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		<link rel="icon" href="img/favicon.png">
 
-				<link rel="stylesheet" href="css/style.css">
+				<link rel="stylesheet" href="css/style-mobile.css">
 			</head>
 
 	<body>
@@ -53,7 +53,7 @@
 				</section>
 
 				<section class="references">
-					<h3><span class="line">Data Science Projects</span></h3>
+					<h1><span class="line">Data Science Projects</span></h1>
 
 					<ul>
 						<li>
@@ -98,7 +98,18 @@
 		</section>
 
 	</body>
-		<script type="text/javascript" src="js/scripts.js"></script>
+		<script type="text/javascript" src="js/scripts-mobile.js"></script>
+		
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-97562419-1', 'auto');
+  ga('send', 'pageview');
+
+  </script>
 	
 </html>
 
