--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		<link rel="icon" href="img/favicon.png">
 
-				<link rel="stylesheet" href="css/style-mobile.css">
+				<link rel="stylesheet" href="css/style.css">
 			</head>
 
 	<body>
@@ -90,15 +90,10 @@
 
 			</div>
 
-			<span class="mask"></span>
-
-			<div class="background"></div>
-
-
 		</section>
 
 	</body>
-		<script type="text/javascript" src="js/scripts-mobile.js"></script>
+		<script type="text/javascript" src="js/scripts"></script>
 		
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -106,10 +101,10 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-97562419-1', 'auto');
+  ga('create', 'UA-97613310-1', 'auto');
   ga('send', 'pageview');
 
-  </script>
+</script>
 	
 </html>
 
