--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				</section>
 
 				<section class="references">
-					<h1><span class="line">Data Science Projects</span></h1>
+					<h3><span class="line">Data Science Projects</span></h3>
 
 					<ul>
 						<li>
@@ -90,21 +90,24 @@
 
 			</div>
 
+			<span class="mask"></span>
+
+			<div class="background"></div>
+
+
 		</section>
 
 	</body>
-		<script type="text/javascript" src="js/scripts"></script>
-		
-  <script>
+		<script type="text/javascript" src="js/scripts.js"></script>
+	
+	
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-97613310-1', 'auto');
   ga('send', 'pageview');
-
 </script>
-	
 </html>
 
