added mobile redirect

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 		<meta name="twitter:description" content="Aspiring Data Scientist"
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+		<script type="text/javascript">
+ 
+                        if (screen.width <= 700) {
+                             window.location = "https://siddharthtiwari01.github.io";
+                              }
+                </script>
 
 		<link rel="icon" href="img/favicon.png">
 
