--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 					<h3><span class="line">Experience</span></h3>
 
 					<p>
-						<span class="line">Chironx</span><br>
+						<span class="line">ChironX</span><br>
 						<span class="line">Research Engineer(Deep Learning and Computer Vision)</span><br>
 						<span class="line">December 2017 to Present</span><br>
-						<span class="line">Visit Chironx at <a href="https://chironx.ai/">Chironx</a></span><br><br>
+						<span class="line">Visit ChironX at <a href="https://chironx.ai/">Chironx</a></span><br><br>
 							
 					</p>
 
