--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<h3><span class="line">Education</span></h3>
 
 					<p>
-						<span class="line">The LNM Institute Of Information Technology</span><br>
+						<span class="line"><b>The LNM Institute Of Information Technology</b></span><br>
 						<span class="line">Bachelors Of Technology in Electronics and Communication Engineering</span><br>
 						<span class="line">Class Of 2018</span><br>
 						<span class="line">Visit my College at <a href="https://www.lnmiit.ac.in/">The LNMIIT</a></span><br><br>
@@ -69,7 +69,7 @@
 					<h3><span class="line">Experience</span></h3>
 
 					<p>
-						<span class="line">ChironX</span><br>
+						<span class="line"><b>ChironX</b></span><br>
 						<span class="line">Research Engineer(Deep Learning and Computer Vision)</span><br>
 						<span class="line">December 2017 to Present</span><br>
 						<span class="line">Visit ChironX at <a href="https://chironx.ai/">Chironx</a></span><br><br>
@@ -77,7 +77,7 @@
 					</p>
 
 					<p>
-						<span class="line">Echosense Technologies Private Limited</span><br>
+						<span class="line"><b>Echosense Technologies Private Limited</b></span><br>
 						<span class="line">Data Science Intern</span><br>
 						<span class="line">May 2017 - August 2017</span><br>
 						<span class="line">Visit Echosense at <a href="https://www.echosense.in/">Echosense</a></span><br><br>
@@ -86,7 +86,7 @@
 				   
 					
 					<p>
-						<span class="line">Startup Lab, Haas School of Business, University of California, Berkeley</span><br>
+						<span class="line"><b>Startup Lab, Haas School of Business, University of California, Berkeley</b></span><br>
 						<span class="line">Machine Learning Intern</span><br>
 						<span class="line">May 2016 - August 2016</span><br>
 						<span class="line">Visit Startup Lab at <a href="https://startup.berkeley.edu/">Startub Lab</a></span><br><br>
